--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.0",
     "ngrok": "^5.0.0-beta.2",
+    "nodemailer": "^7.0.10",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
